agregue contenido al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Git-Hub</title>
 </head>
 <body>
-    
+    <h1>clase de hit-hub</h1>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus omnis facilis quaerat sapiente reiciendis nesciunt deserunt iusto pariatur excepturi totam amet dignissimos id, modi quasi animi veniam vel. Repellendus, placeat.
+    <p>parrafo detalaldo</p>
 </body>
-</html> 45:10
+</html> 
