--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>clase de hit-hub</h1>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus omnis facilis quaerat sapiente reiciendis nesciunt deserunt iusto pariatur excepturi totam amet dignissimos id, modi quasi animi veniam vel. Repellendus, placeat.
     <p>parrafo detalaldo</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates reiciendis deserunt porro dolor asperiores, consequuntur provident doloremque saepe fuga hic cupiditate repellendus. Error laboriosam soluta cum, ex rerum blanditiis corporis.</p>
 </body>
 </html> 
